--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,6 +37,7 @@
 
 </head>
 
+
 <body id="main_document">
 
 
@@ -44,10 +45,10 @@
 
         <nav class="navbar">
 
+
             <ul class="list_holder">
+                <li id="home_list"><%= typeof userid !== 'undefined' && userid.username ? userid.username : 'home' %></li>
 
-
-                <li id="home_list">home</li>
 
                 <ul class="sub_list_home d_none nav_home">
 
@@ -92,6 +93,9 @@
                 <li><i class="bi bi-bag"></i>
                     My Cart</li>
             </ul>
+
+            
+
 
         </nav>
 
@@ -432,7 +436,7 @@
 
                             <div class="product_btn">
 
-                                <button><a href="">wishlist</a></button>
+                                <button><a href="product/wish/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">wishlist</a></button>
                                 <button><a
                                         href="product/pd/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">buynow</a></button>
 
