--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -319,13 +319,13 @@
             <div class="product_image">
 
 
-                <img src="<%= data.product_image[img_value] %>" alt="" id="product_image">
+                <img src="<%= data.product_image %>" alt="" id="product_image">
 
 
 
             </div>
 
-<h1><%= img_value %></h1>
+
 
 
             <div class="product_detail">
