--- a/src/views/from.ejs
+++ b/src/views/from.ejs
@@ -69,7 +69,7 @@
 </head>
 <body>
 
-<div class="signup-container">
+<div class="signup-container border border-red-500">
     <h1>Signup Here</h1>
     <form action="/user/singup" method="POST">
         <input type="text" placeholder="username" name="username">
