add forgot password feature

--- a/src/views/forgot_pass_email.ejs
+++ b/src/views/forgot_pass_email.ejs
@@ -10,7 +10,7 @@
     
     <div class="signup-container border border-red-500">
         <h1>forgot pass</h1>
-        <form action="/user/forgot_pass" method="POST">
+        <form action="/user/forgot_pass_email" method="POST">
             
             <input type="email" placeholder="email" name="forgot_email">
            
