--- a/src/views/otp.ejs
+++ b/src/views/otp.ejs
@@ -67,7 +67,7 @@
 
 <div class="otp-container">
     <h1>Enter your OTP</h1>
-    <form action="/user/salehub" method="POST">
+    <form action="<%= formAction %>" method="POST">
         <input type="text" placeholder="OTP" name="otp">
         <button type="submit">Submit</button>
     </form>
@@ -75,3 +75,4 @@
 
 </body>
 </html>
+/user/salehub
