--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,16 +7,19 @@
 </head>
 <body>
     <h1>sale hub web</h1>
-
-
     <div class="product_btn">
-
-        <button><a
-                href="product/wish/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">wishlist</a></button>
-        <button><a
-                href="product/pd/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">buynow</a></button>
-
+        <img src="https://images.pexels.com/photos/19090/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <p>puma shoes</p>
+    
+        <button>
+            <a href="product/wish/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">wishlist</a>
+        </button>
+        
+        <button>
+            <a href="product/pd/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">buynow</a>
+        </button>
     </div>
 
-</body>
+</script>
+
 </html>
