--- a/src/views/wishlist.ejs
+++ b/src/views/wishlist.ejs
@@ -180,10 +180,12 @@ span .bi {
 
                 <div class="product_btn">
 
+                    <button>
+                        <a href="/user/product/remove?p_name=<%= p_data.product_name %>&p_id=<%= p_data.product_id %>&pr_id=<%= p_data._id %>">Remove</a>
+                    </button>
+                    
                     <button><a
-                            href="product/wish/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">Remove</a></button>
-                    <button><a
-                            href="product/pd/?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">buynow</a></button>
+                            href="/user/product/remove?p_name=levis Western denim jacket &p_img=https://shorturl.at/1aOqW&p_price=55.99&p_gender=female&p_color=gray&p_id=ghy567">buynow</a></button>
 
                 </div>
 
